[tool.poetry]
name = "using-cognite-python-sdk"
version = "0.2.0"
description = ""
authors = ["Choukha Ram, choukha.ram@cognite.com"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5"
matplotlib = "^3"
cognite-sdk = "^5"

[tool.poetry.dev-dependencies]
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
pylint = "^2.13.8"
ipykernel = "^6.13.0"
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
